# clang-clone-finder

./: .gitignore  CMakeLists.txt  README.md
clone-finder/: ASTCollector.cpp  ASTCollector.h  CCXXEnvOverwriter.cpp  CCXXEnvOverwriter.h  CMakeLists.txt  CloneFinder.cpp  CloneFinder.h  FakeCCListener.cpp  FakeCCListener.h  InterProcessArgs.h  SelectiveStmtProfiler.cpp  SelectiveStmtProfiler.h  main.cpp
fakecc/: CMakeLists.txt  fakecc.cpp
tests/: runTests.sh
tests/testproject1/: Makefile  main.cpp  secondary.cpp  secondary.h
